# travel-planner-deepagent

./: .env.example  .gitignore  BLOG.md  CLEANUP_SUMMARY.md  README.md  api_v2.py  demo.py  demo_monitored.py  demo_real_scenario.py  pyproject.toml  requirements.txt  streamlit_chat_v2.py  test_v2_quick.py
docs/: CRITICAL_GAPS_AND_IMPROVEMENTS.md  DEPLOYMENT.md  DETAILED_COMPARISON.md  FUTURE_WORKS.md  LANGGRAPH_ANALIZI.md  MONITORING.md  MVP_ROADMAP.md  QUICKSTART.md  QUICKSTART_V2.md  V1_VS_V2_COMPARISON.md
examples/: README.md  v1_demo.py  v1_examples.py  v2_examples.py
src/: __init__.py  __main__.py  travel_planner.py  travel_planner_monitored.py
src/agents/: DEPRECATED.md  __init__.py  activity_agent.py  ancillary_agent.py  flight_agent.py  hotel_agent.py  payment_agent.py  weather_agent.py
src/tools/: __init__.py  activity_tools.py  ancillary_tools.py  flight_tools.py  hotel_tools.py  payment_tools.py  weather_tools.py
src/utils/: __init__.py  callbacks.py  langsmith_config.py  logging_config.py
src_v2/: DEPLOYMENT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  monitoring.py  travel_planner_v2.py
src_v2/nodes/: __init__.py  activity_node.py  flight_node.py  hotel_node.py  intent_classifier.py  itinerary_node.py  response_node.py  weather_node.py
src_v2/schemas/: __init__.py  state.py
src_v2/workflows/: __init__.py  travel_workflow.py
tests/: README.md  test_v2_integrations.py
